# Attendance-Management-System

./: .gitignore  CONTACT.txt  alembic.ini  pyproject.toml  readme.md  requirements.txt
alembic/: env.py
alembic/versions/: 2276d390f9f7_add_description_to_batch.py  51bc872a1745_changed_parameters_in_institution_in_.py  61eca10dee1a_added_field_created_by_in_batch.py
src/app/: database.py  db_models.py  enums.py  main.py
src/app/routes/: attendance.py  auth.py  batches.py  sessions.py  summary.py
src/app/schemas/: attendance_schema.py  auth_schema.py  batch_schema.py  session_schema.py  summary_schema.py  user_schema.py
src/app/security/: auth.py  dependencies.py
src/app/services/: attendance_services.py  auth_services.py  batch_services.py  session_services.py  summary_services.py  user_services.py
tests/: test_app.py
